package org.example.interfaces;

public interface ArCondicionadoInterface {
    void desligar();
    void ligar();
    void diminuirTemperatura();
    void aumentarTemperatura();
    void definirTemperatura(int temperatura);
}
