package org.example.interfaces;

public interface LampadaInterface {
    void ligar();
    void desligar();
}
