package org.example.interfaces;

public interface PersianaInterface {
    void abrir() throws Exception;
    void fechar() throws Exception;
}
